--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -34,7 +34,11 @@
 		"about": "Roo Codeについて"
 	},
 	"prompts": {
-		"description": "プロンプトの強化、コードの説明、問題の修正などの迅速なアクションに使用されるサポートプロンプトを設定します。これらのプロンプトは、Rooが一般的な開発タスクでより良いサポートを提供するのに役立ちます。"
+		"description": "プロンプトの強化、コードの説明、問題の修正などの迅速なアクションに使用されるサポートプロンプトを設定します。これらのプロンプトは、Rooが一般的な開発タスクでより良いサポートを提供するのに役立ちます。",
+		"parentRulesMaxDepth": {
+			"label": "親ルール検索レベル",
+			"description": ".roo/rulesを上方向に検索する最大ディレクトリレベル。デフォルト：1（ワークスペースディレクトリのみ）。より高い値を設定すると、親ディレクトリ（機能、リポジトリ、組織、ユーザーグローバルなど）から階層的に読み込むことができ、大きな値を設定するとファイルシステムのルートまで検索します。"
+		}
 	},
 	"codeIndex": {
 		"title": "コードベースのインデックス作成",
