--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -34,7 +34,11 @@
 		"about": "Roo Code 정보"
 	},
 	"prompts": {
-		"description": "프롬프트 향상, 코드 설명, 문제 해결과 같은 빠른 작업에 사용되는 지원 프롬프트를 구성합니다. 이러한 프롬프트는 Roo가 일반적인 개발 작업에 대해 더 나은 지원을 제공하는 데 도움이 됩니다."
+		"description": "프롬프트 향상, 코드 설명, 문제 해결과 같은 빠른 작업에 사용되는 지원 프롬프트를 구성합니다. 이러한 프롬프트는 Roo가 일반적인 개발 작업에 대해 더 나은 지원을 제공하는 데 도움이 됩니다.",
+		"parentRulesMaxDepth": {
+			"label": "상위 규칙 검색 레벨",
+			"description": ".roo/rules를 위로 검색할 최대 디렉토리 레벨. 기본값: 1(작업 공간 디렉토리만). 높은 값은 상위 디렉토리(기능, 저장소, 조직, 사용자-전역 등)에서 계층적 로딩을 가능하게 하며, 큰 값은 파일 시스템 루트까지 검색합니다."
+		}
 	},
 	"codeIndex": {
 		"title": "코드베이스 인덱싱",
