--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -34,7 +34,11 @@
 		"about": "О Roo Code"
 	},
 	"prompts": {
-		"description": "Настройте промпты поддержки, используемые для быстрых действий, таких как улучшение промптов, объяснение кода и исправление проблем. Эти промпты помогают Roo обеспечить лучшую поддержку для общих задач разработки."
+		"description": "Настройте промпты поддержки, используемые для быстрых действий, таких как улучшение промптов, объяснение кода и исправление проблем. Эти промпты помогают Roo обеспечить лучшую поддержку для общих задач разработки.",
+		"parentRulesMaxDepth": {
+			"label": "Уровни поиска родительских правил",
+			"description": "Максимальное количество уровней каталогов для поиска вверх файлов .roo/rules. По умолчанию: 1 (только каталог рабочей области). Более высокие значения позволяют иерархическую загрузку из родительских каталогов (функция, репозиторий, организация, глобальный пользователь и т.д.), где большие значения ищут до корня файловой системы."
+		}
 	},
 	"codeIndex": {
 		"title": "Индексация кодовой базы",
