--- a/webview-ui/src/i18n/locales/zh-TW/settings.json
+++ b/webview-ui/src/i18n/locales/zh-TW/settings.json
@@ -34,7 +34,11 @@
 		"about": "關於 Roo Code"
 	},
 	"prompts": {
-		"description": "設定用於快速操作的支援提示詞，如增強提示詞、解釋程式碼和修復問題。這些提示詞幫助 Roo 為常見開發工作提供更好的支援。"
+		"description": "設定用於快速操作的支援提示詞，如增強提示詞、解釋程式碼和修復問題。這些提示詞幫助 Roo 為常見開發工作提供更好的支援。",
+		"parentRulesMaxDepth": {
+			"label": "父規則搜尋層級",
+			"description": "向上搜尋 .roo/rules 的最大目錄層級。預設值：1（僅工作區目錄）。較高的值可以從父目錄（功能、儲存庫、組織、使用者全域等）進行分層載入，較大的值會搜尋到檔案系統根目錄。"
+		}
 	},
 	"codeIndex": {
 		"title": "程式碼庫索引",
