--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -34,7 +34,11 @@
 		"about": "परिचय"
 	},
 	"prompts": {
-		"description": "प्रॉम्प्ट्स को बेहतर बनाना, कोड की व्याख्या करना और समस्याओं को ठीक करना जैसी त्वरित कार्रवाइयों के लिए उपयोग किए जाने वाले सहायक प्रॉम्प्ट्स को कॉन्फ़िगर करें। ये प्रॉम्प्ट्स Roo को सामान्य विकास कार्यों के लिए बेहतर सहायता प्रदान करने में मदद करते हैं।"
+		"description": "प्रॉम्प्ट्स को बेहतर बनाना, कोड की व्याख्या करना और समस्याओं को ठीक करना जैसी त्वरित कार्रवाइयों के लिए उपयोग किए जाने वाले सहायक प्रॉम्प्ट्स को कॉन्फ़िगर करें। ये प्रॉम्प्ट्स Roo को सामान्य विकास कार्यों के लिए बेहतर सहायता प्रदान करने में मदद करते हैं।",
+		"parentRulesMaxDepth": {
+			"label": "पैरेंट रूल सर्च लेवल",
+			"description": ".roo/rules के लिए ऊपर की ओर खोजने के लिए अधिकतम डायरेक्टरी स्तर। डिफ़ॉल्ट: 1 (केवल वर्कस्पेस डायरेक्टरी)। उच्च मान पैरेंट डायरेक्टरी (फीचर, रिपॉजिटरी, ऑर्गनाइजेशन, यूजर-ग्लोबल, आदि) से हायरार्किकल लोडिंग को सक्षम करते हैं, जहां बड़े मान फाइल सिस्टम रूट तक खोजते हैं।"
+		}
 	},
 	"codeIndex": {
 		"title": "कोडबेस इंडेक्सिंग",
