--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -34,7 +34,11 @@
 		"about": "关于 Roo Code"
 	},
 	"prompts": {
-		"description": "配置用于快速操作的支持提示词，如增强提示词、解释代码和修复问题。这些提示词帮助 Roo 为常见开发任务提供更好的支持。"
+		"description": "配置用于快速操作的支持提示词，如增强提示词、解释代码和修复问题。这些提示词帮助 Roo 为常见开发任务提供更好的支持。",
+		"parentRulesMaxDepth": {
+			"label": "父规则搜索层级",
+			"description": "向上搜索 .roo/rules 的最大目录层级。默认值：1（仅工作区目录）。较高的值可以从父目录（功能、仓库、组织、用户全局等）进行分层加载，较大的值会搜索到文件系统根目录。"
+		}
 	},
 	"codeIndex": {
 		"title": "代码库索引",
