--- a/src/i18n/locales/fr/embeddings.json
+++ b/src/i18n/locales/fr/embeddings.json
@@ -1,4 +1,5 @@
 {
+	"unknownError": "Erreur inconnue",
 	"authenticationFailed": "Échec de la création des embeddings : Échec de l'authentification. Veuillez vérifier votre clé API.",
 	"failedWithStatus": "Échec de la création des embeddings après {{attempts}} tentatives : HTTP {{statusCode}} - {{errorMessage}}",
 	"failedWithError": "Échec de la création des embeddings après {{attempts}} tentatives : {{errorMessage}}",
