Add 'Use custom base URL' option to Vertex AI provider

--- a/webview-ui/src/i18n/locales/ca/settings.json
+++ b/webview-ui/src/i18n/locales/ca/settings.json
@@ -608,7 +608,8 @@
 	"defaults": {
 		"ollamaUrl": "Per defecte: http://localhost:11434",
 		"lmStudioUrl": "Per defecte: http://localhost:1234",
-		"geminiUrl": "Per defecte: https://generativelanguage.googleapis.com"
+		"geminiUrl": "Per defecte: https://generativelanguage.googleapis.com",
+		"vertexUrl": "Per defecte: http://localhost:1234"
 	},
 	"labels": {
 		"customArn": "ARN personalitzat",
