--- a/webview-ui/src/i18n/locales/de/settings.json
+++ b/webview-ui/src/i18n/locales/de/settings.json
@@ -608,7 +608,8 @@
 	"defaults": {
 		"ollamaUrl": "Standard: http://localhost:11434",
 		"lmStudioUrl": "Standard: http://localhost:1234",
-		"geminiUrl": "Standard: https://generativelanguage.googleapis.com"
+		"geminiUrl": "Standard: https://generativelanguage.googleapis.com",
+		"vertexUrl": "Standard: http://localhost:1234"
 	},
 	"labels": {
 		"customArn": "Benutzerdefinierte ARN",
