--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -608,7 +608,8 @@
 	"defaults": {
 		"ollamaUrl": "기본값: http://localhost:11434",
 		"lmStudioUrl": "기본값: http://localhost:1234",
-		"geminiUrl": "기본값: https://generativelanguage.googleapis.com"
+		"geminiUrl": "기본값: https://generativelanguage.googleapis.com",
+		"vertexUrl": "기본값: http://localhost:1234"
 	},
 	"labels": {
 		"customArn": "사용자 지정 ARN",
