--- a/webview-ui/src/i18n/locales/pl/settings.json
+++ b/webview-ui/src/i18n/locales/pl/settings.json
@@ -608,7 +608,8 @@
 	"defaults": {
 		"ollamaUrl": "Domyślnie: http://localhost:11434",
 		"lmStudioUrl": "Domyślnie: http://localhost:1234",
-		"geminiUrl": "Domyślnie: https://generativelanguage.googleapis.com"
+		"geminiUrl": "Domyślnie: https://generativelanguage.googleapis.com",
+		"vertexUrl": "Domyślnie: http://localhost:1234"
 	},
 	"labels": {
 		"customArn": "Niestandardowy ARN",
