--- a/webview-ui/src/i18n/locales/zh-CN/settings.json
+++ b/webview-ui/src/i18n/locales/zh-CN/settings.json
@@ -608,7 +608,8 @@
 	"defaults": {
 		"ollamaUrl": "默认值：http://localhost:11434",
 		"lmStudioUrl": "默认值：http://localhost:1234",
-		"geminiUrl": "默认值：https://generativelanguage.googleapis.com"
+		"geminiUrl": "默认值：https://generativelanguage.googleapis.com",
+		"vertexUrl": "默认值：http://localhost:1234"
 	},
 	"labels": {
 		"customArn": "自定义 ARN",
