--- a/webview-ui/src/i18n/locales/en/settings.json
+++ b/webview-ui/src/i18n/locales/en/settings.json
@@ -172,6 +172,10 @@
 		"anthropicApiKey": "Anthropic API Key",
 		"getAnthropicApiKey": "Get Anthropic API Key",
 		"anthropicUseAuthToken": "Pass Anthropic API Key as Authorization header instead of X-Api-Key",
+		"claudeCodePath": "Claude Code CLI Path",
+		"claudeCodePathDescription": "Path to Claude Code CLI executable. Default: claude",
+		"claudeCodePath": "Claude Code CLI Path",
+		"claudeCodePathDescription": "Path to Claude Code CLI executable. Default: claude",
 		"chutesApiKey": "Chutes API Key",
 		"getChutesApiKey": "Get Chutes API Key",
 		"deepSeekApiKey": "DeepSeek API Key",
